<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView 
        android:id="@+id/text"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/device_operate_script6"
    	android:textSize="@dimen/function_script_text_size"
    	android:layout_margin="5dip"
    	android:textColor="@color/black_control_dialog"/>
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical">
        <ImageView 
        android:layout_width="30dip"
    	android:layout_height="30dip"
    	android:layout_margin="4dip"
    	android:src="@drawable/device_preview_camera_script"/>
       <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/device_operate_script6_camera"
    	android:textSize="@dimen/function_script_text_size"
    	android:textColor="@color/black_control_dialog"/>
    </LinearLayout>
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical">
        <ImageView 
        android:layout_width="30dip"
    	android:layout_height="30dip"
    	android:layout_margin="4dip"
    	android:src="@drawable/device_preview_vedio_script"/>
       <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/device_operate_script6_vedio"
    	android:textSize="@dimen/function_script_text_size"
    	android:textColor="@color/black_control_dialog"/>
    </LinearLayout>
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center_vertical">
        <ImageView 
        android:layout_width="30dip"
    	android:layout_height="30dip"
    	android:layout_margin="4dip"
    	android:src="@drawable/device_preview_setting_script"/>
       <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/device_operate_script6_setting"
    	android:textSize="@dimen/function_script_text_size"
    	android:textColor="@color/black_control_dialog"/>
    </LinearLayout>
    <ImageView 
        android:id="@+id/image"
        android:layout_width="340dip"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:src="@drawable/device_preview_script"/>

</LinearLayout>
